--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 	
 	<!-- javascript -->
 	
-	<!-- framework -->
-	<script type="text/javascript" src="lib/velveto.min.js"></script>
-	
-	<!-- page script -->
-	<script type="text/javascript" src="app/js/app.js"></script>
+	<!-- hooks -->
     <script type="text/javascript" src="app/js/hook/beforeLoaded.js"></script>
     <script type="text/javascript" src="app/js/hook/loaded.js"></script>
     <script type="text/javascript" src="app/js/hook/loadFail.js"></script>
+    
+    <!-- framework -->
+	<script type="text/javascript" src="lib/velveto.min.js"></script>
+    <script type="text/javascript" src="app/js/app.js"></script>
    
 </body>
 </html>
